Fix local network element being the wrong color

--- a/sass/special/_icons.sass
+++ b/sass/special/_icons.sass
@@ -141,6 +141,8 @@
 			text-shadow: none
 	&.fa-tags
 		color: adjust-color($accent, $lightness: -20%)
+	&.fa-th
+		color: $accent !important
 
 .lxc:after
 	background: transparent !important
@@ -159,5 +161,5 @@
 .fa-sdn:before
 	//background-image: url('/pve2/images/dd_icon-sdn.svg')
 
-.fa-th:before, .fa-crosshairs:before
+.fa-crosshairs:before
 	color: white
