--- a/sass/x/_tree.sass
+++ b/sass/x/_tree.sass
@@ -8,6 +8,9 @@
 
 		&.fa-database
 			color: $accent !important
+		
+		&.fa-th
+			color: $accent !important
 
 		&.fa-desktop
 			color: $accent !important
@@ -29,6 +32,9 @@
 
 		&.fa-database
 			color: $accent !important
+
+		&.fa-th
+			color: $accent !important
 	&.x-tree-icon-leaf.fa
 		&.fa-cube
 			color: adjust-color($accent, $lightness: -20%) !important
@@ -41,6 +47,8 @@
 			&.stopped
 				color: adjust-color($accent, $lightness: -20%) !important
 		&.fa-database
+			color: $accent !important
+		&.fa-th
 			color: $accent !important
 		&.fa-file-o
 			&:before
